--- a/level_2/web/DOM/3_cart.html
+++ b/level_2/web/DOM/3_cart.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 
-
 <html>
 
 <head>
@@ -19,7 +18,9 @@
 
 <body>
     <h1>Products</h1>
-    <div id="products-container"></div>
+    <div id="products-container">
+
+    </div>
 
 </body>
 
@@ -39,6 +40,7 @@
         var newProductElement = document.createElement("div");
         newProductElement.classList.add("product-item");
         newProductElement.setAttribute("data-product-id", products[i].id)
+
         newProductElement.innerHTML = products[i].name + ", $" + products[i].price;
 
         newProductElement.addEventListener("click", function (e) {
@@ -46,8 +48,20 @@
         })
 
         document.getElementById("products-container").appendChild(newProductElement);
+        /* 
+            <div class="product-item" data-product-id="1">
+                Banana, $12
+            </div>
+            <div class="product-item" data-product-id="2">
+                Apple, $4
+            </div>
+            <div class="product-item" data-product-id="3">
+                Orange, $5
+            </div>
+        */
     }
 
 </script>
+
 
 </html>
